style: fixed text color contrast search

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -628,11 +628,6 @@ video {
   margin: 0px;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -659,18 +654,6 @@ video {
   margin-bottom: 2rem;
 }
 
-.mt-44 {
-  margin-top: 11rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-56 {
-  margin-top: 14rem;
-}
-
 .mt-48 {
   margin-top: 12rem;
 }
@@ -683,8 +666,12 @@ video {
   display: grid;
 }
 
-.h-36 {
-  height: 9rem;
+.h-24 {
+  height: 6rem;
+}
+
+.h-40 {
+  height: 10rem;
 }
 
 .h-auto {
@@ -695,24 +682,16 @@ video {
   height: 100%;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-screen {
   height: 100vh;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .w-\[10rem\] {
@@ -725,14 +704,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-40 {
-  width: 10rem;
 }
 
 .flex-1 {
@@ -773,10 +744,6 @@ video {
   justify-content: space-around;
 }
 
-.gap-16 {
-  gap: 4rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
@@ -813,6 +780,10 @@ video {
   border-width: 2px;
 }
 
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-prussianBlue {
   border-color: var(--prussian-blue);
 }
@@ -823,6 +794,10 @@ video {
 
 .border-utOrange {
   border-color: var(--ut-orange);
+}
+
+.border-b-prussianBlue {
+  border-bottom-color: var(--prussian-blue);
 }
 
 .bg-prussianBlue {
@@ -843,10 +818,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-utOrange {
-  background-color: var(--ut-orange);
-}
-
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -855,32 +826,6 @@ video {
   --tw-gradient-from: var(--ut-orange) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-selectiveYellow {
-  --tw-gradient-from: var(--selective-yellow) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-selectiveYellow {
-  --tw-gradient-to: var(--selective-yellow) var(--tw-gradient-to-position);
-}
-
-.to-skyBlue {
-  --tw-gradient-to: var(--sky-blue) var(--tw-gradient-to-position);
-}
-
-.to-blueGreen {
-  --tw-gradient-to: var(--blue-green) var(--tw-gradient-to-position);
-}
-
-.to-black {
-  --tw-gradient-to: #000 var(--tw-gradient-to-position);
-}
-
-.to-red-700 {
-  --tw-gradient-to: #b91c1c var(--tw-gradient-to-position);
 }
 
 .to-red-500 {
@@ -899,6 +844,11 @@ video {
   padding: 1rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -914,22 +864,12 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pb-6 {
   padding-bottom: 1.5rem;
 }
 
 .text-center {
   text-align: center;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl {
@@ -1078,17 +1018,12 @@ video {
 }
 
 @media (min-width: 475px) {
-  .xs\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .xs\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .xs\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
+  .xs\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .xs\:px-8 {
@@ -1109,10 +1044,6 @@ video {
 
   .sm\:mb-2 {
     margin-bottom: 0.5rem;
-  }
-
-  .sm\:mt-44 {
-    margin-top: 11rem;
   }
 
   .sm\:h-36 {
@@ -1144,14 +1075,14 @@ video {
     padding-right: 3rem;
   }
 
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1199,11 +1130,6 @@ video {
 
   .dark\:bg-prussianBlue {
     background-color: var(--prussian-blue);
-  }
-
-  .dark\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
   }
 
   .dark\:text-selectiveYellow {
